<resources>
    <string name="app_name">FridgeApp</string>
    <string name="add_products">Add products</string>
    <string name="shopping_list">Shopping list</string>
    <string name="view_products">View products</string>
    <string name="back">Back</string>
    <string name="next_product">Next product</string>
    <string name="add">Add</string>
    <string name="amount">Amount</string>
    <string name="product_name">Product name</string>
    <string name="fridge_image">fridge image</string>
    <string name="sort_by_name">Sort by name</string>
    <string name="sort_by_shop_name">Sort by shop name</string>
    <string name="delete_all">Delete all</string>
    <string name="remove_marked">Remove marked</string>
    <string name="sort_by_expiration_date">Sort by expiration date</string>
    <string name="shop_name_optional">Shop name (optional)</string>
    <string name="update">update</string>
    <string name="scan_barcode">Scan barcode</string>
    <string name="expiration_date_optional">Expiration date (optional)</string>
    <string name="name">Name: </string>
    <string name="amount2">Amount: </string>
    <string name="shop_name">Shop name: </string>
    <string name="shop">Shop</string>
    <string name="details">Details</string>
    <string name="delete">Delete</string>
    <string name="expiration_date2">Expiration date:</string>
    <string name="expiration_date">Expiration Date</string>
    <string name="complete_the_name">Complete the name</string>
    <string name="complete_the_amount">Complete the amount</string>
    <string name="fill_in_the_blanks">Fill in the blanks.</string>
    <string name="not_found">Not found</string>
    <string name="delete_all_q">Delete all?</string>
    <string name="delete_everything">Are you sure you want to delete everything?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete_q">Delete?</string>
    <string name="want_to_delete">Are you sure you want to delete?</string>
    <string name="added">Added!</string>
    <string name="failed" translatable="false">Failed</string>
    <string name="open_navigation_drawer" translatable="false">Open navigation drawer</string>
    <string name="close_navigation_drawer" translatable="false">Close navigation drawer</string>
    <string name="groceries">Groceries</string>
    <string name="diapers">Diapers</string>
    <string name="industrial_goods">Industrial goods</string>

    <string-array name="products_types">
        <item name="groceries">Groceries</item>
        <item name="diapers">Diapers</item>
        <item name="industrial_goods">Domestic industrial goods</item>
    </string-array>
</resources>