<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/shopping_list_addition"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".update.UpdateShoppingListItemActivity">

    <EditText
        android:id="@+id/etxt_update_shopping_list_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:drawableStart="@drawable/ic_playlist_add"
        android:drawablePadding="10dp"
        android:hint="@string/product_name"
        android:textStyle="italic" />

    <EditText
        android:id="@+id/etxt_update_shopping_list_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:drawableStart="@drawable/ic_north_east"
        android:drawablePadding="10dp"
        android:hint="@string/amount"
        android:inputType="number"
        android:textStyle="italic" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/etxt_update_shopping_list_shop_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_shopping_cart"
            android:drawablePadding="10dp"
            android:hint="@string/shop_name_optional"
            android:textStyle="italic" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/iv_delete_update_shopping_list_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_close"
            android:visibility="gone" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_update_shopping_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="20dp"
        android:text="@string/update"
        android:textColor="#FFFFFF" />

</LinearLayout>