<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/shopping_list_addition"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".shoppingList.AddToShoppingList">

    <EditText
        android:id="@+id/etxt_shopping_list_add_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:drawableStart="@drawable/ic_playlist_add"
        android:drawablePadding="10dp"
        android:hint="@string/product_name"
        android:maxLines="1"
        android:textStyle="italic" />

    <EditText
        android:id="@+id/etxt_shopping_list_add_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:drawableStart="@drawable/ic_north_east"
        android:drawablePadding="10dp"
        android:hint="@string/amount"
        android:inputType="number"
        android:maxLines="1"
        android:textStyle="italic" />

    <EditText
        android:id="@+id/etxt_shopping_list_add_shop_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:autofillHints="Shop name (optional)"
        android:drawableStart="@drawable/ic_shopping_cart"
        android:drawablePadding="10dp"
        android:hint="Shop name (optional)"
        android:maxLines="1"
        android:textStyle="italic" />

    <Button
        android:id="@+id/btn_shopping_list_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="20dp"
        android:text="@string/add"
        android:textColor="#FFFFFF" />

</LinearLayout>
