<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/addition"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".addition.AddingActivity">

    <EditText
        android:id="@+id/etxt_add_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:autofillHints="Product name"
        android:drawableStart="@drawable/ic_playlist_add"
        android:drawablePadding="10dp"
        android:hint="@string/product_name"
        android:inputType="text"
        android:maxLines="1"
        android:textStyle="italic" />

    <EditText
        android:id="@+id/etxt_add_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:autofillHints="Amount"
        android:drawableStart="@drawable/ic_north_east"
        android:drawablePadding="10dp"
        android:hint="@string/amount"
        android:inputType="number"
        android:maxLines="1"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/txt_expiration_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:drawablePadding="10dp"
        android:text="Expiration date (optional)"
        android:textSize="18sp"
        android:textStyle="italic"
        app:drawableStartCompat="@drawable/ic_calendar_today" />

    <Button
        android:id="@+id/btn_add_product"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="20dp"
        android:text="@string/add"
        android:textColor="#FFFFFF" />

</LinearLayout>
